--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "name": "grupo_10_jugueteria",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
+    "dev":"nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
