--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.19.2"
   }
 }
